# sprung-siteswap

./: .gitignore  esbuild.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
rust/: Cargo.toml  index.html
rust/src/: bindings.rs  grammar.pest  lib.rs  main.rs  normalize.pest  siteswap.rs  thoughts.md
rust/src/lib/: canonical.rs  data.rs  mod.rs  parse.rs  traditional.rs  validate_siteswap.rs
src/: main.ts
