[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bin"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
pest = "2.1.3"
pest_derive = "2.1.0"
wasm-bindgen = "0.2.78"
