[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "spring_siteswap"
path = "src/bindings.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bin"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
pest = "2.1.3"
pest_derive = "2.1.0"
wasm-bindgen = "0.2.78"

